--- a/src/resources/scss/_keyframe.scss
+++ b/src/resources/scss/_keyframe.scss
@@ -1,7 +1,7 @@
 $timing-in: cubic-bezier(0.34, 1.56, 0.64, 1);
 $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
 
-// modal dim show
+// modal dim show & hide
 @keyframes modal-dim-in {
     0% {
         opacity: 0;
@@ -12,18 +12,7 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
     }
 }
 
-// modal dim hide
-@keyframes modal-dim-out {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-// modal default show
+// modal default show & hide
 @keyframes modal-in {
     0% {
         transform: translate(-50%, -50%) scale(0.8);
@@ -38,22 +27,7 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
     }
 }
 
-// modal default hide
-@keyframes modal-out {
-    0% {
-        transform: translate(-50%, -50%) scale(1);
-        // transform: translate(-50%, -50%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translate(-50%, -50%) scale(0.8);
-        // transform: translate(-50%, -70%);
-        opacity: 0;
-    }
-}
-
-// modal full show
+// modal full show & hide
 @keyframes modal-full-in {
     0% {
         transform: translate(-50%, 0%) scale(0.8);
@@ -68,22 +42,7 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
     }
 }
 
-// modal full hide
-@keyframes modal-full-out {
-    0% {
-        transform: translate(-50%, 0%) scale(1);
-        // transform: translate(-50%, 0%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translate(-50%, 0%) scale(0.8);
-        // transform: translate(-50%, -20%);
-        opacity: 0;
-    }
-}
-
-// modal btm show
+// modal btm show & hide
 @keyframes modal-btm-in {
     0% {
         transform: translate(-50%, 30%);
@@ -96,20 +55,7 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
     }
 }
 
-// modal btm hide
-@keyframes modal-btm-out {
-    0% {
-        transform: translate(-50%, 0%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translate(-50%, 30%);
-        opacity: 0;
-    }
-}
-
-// tab show
+// tab show & hide
 @keyframes tab-in {
     0% {
         opacity: 0;
@@ -117,17 +63,6 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
 
     100% {
         opacity: 1;
-    }
-}
-
-// tab hide
-@keyframes tab-out {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
     }
 }
 
@@ -175,7 +110,7 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
     }
 }
 
-// toast show
+// toast show & hide
 @keyframes toast-in {
     0% {
         transform: translateY(50%);
