--- a/src/resources/scss/_layout.scss
+++ b/src/resources/scss/_layout.scss
@@ -111,11 +111,34 @@ $ly-nav-width: 6.4rem;
         justify-content: center;
         width: 50rem;
         height: 100vh;
-        padding: 6rem;
+        padding: 4rem;
         background: rgba(0, 0, 0, .9);
 
-        &-title {
-            margin-bottom: 2rem;
+        >div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+            overflow: auto;
+
+            &::-webkit-scrollbar {
+                width: 4px;
+            }
+            
+            &::-webkit-scrollbar-thumb {
+                background: #666;
+                border-radius: 4px;
+            }
+            
+            &::-webkit-scrollbar-track {
+                background: #eee;
+                border-radius: 4px;
+                -webkit-box-shadow: inset 0 0 3px #fff;
+                box-shadow: inset 0 0 3px #fff
+            }
+        }
+
+        .content-title {
             font-size: 3.2rem;
         }
 
@@ -156,7 +179,7 @@ $ly-nav-width: 6.4rem;
 
         &.off {
             display: flex;
-            animation: ly-nav-content-on .4s $timing-in reverse;
+            animation: ly-nav-content-out .4s $timing-out forwards;
 
             &:after {
                 content: "";
@@ -178,6 +201,18 @@ $ly-nav-width: 6.4rem;
             100% {
                 transform: translateX(0);
                 opacity: 1;
+            }
+        }
+
+        @keyframes ly-nav-content-out {
+            0% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateX(75%);
+                opacity: 0;
             }
         }
     }
@@ -228,6 +263,16 @@ $ly-nav-width: 6.4rem;
             right: 0;
             width: 100%;
             height: calc(100vh - $ly-nav-width);
+
+            &.off,
+            &.on {
+                display: block;
+            }
+
+            >div {
+                display: block;
+                height: 100%;
+            }
         }
 
         +.ly-content {
