--- a/src/resources/scss/_modal.scss
+++ b/src/resources/scss/_modal.scss
@@ -14,7 +14,7 @@ $modal-duration: .4s;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: var(--vh, 100vh);
     z-index: 1001;
 
     &:focus {
