wordle color update

--- a/src/resources/scss/_wordle.scss
+++ b/src/resources/scss/_wordle.scss
@@ -60,9 +60,11 @@
         &#{$root} {
             &-answer {
                 background: #35a535;
+                color: #fff;
             }
             &-half {
                 background: #d7bf4a;
+                color: #fff;
             }
             &-wrong {
                 background: #737373;
