--- a/src/resources/scss/_accordion.scss
+++ b/src/resources/scss/_accordion.scss
@@ -16,6 +16,13 @@ $accr-duration: .3s;
         left: 0;
         width: 100%;
         height: 100%;
+        font-size: 1px;
+        color: transparent;
+        white-space: nowrap;
+
+        &::selection {
+            color: transparent;
+        }
 
         &:before,
         &:after {
